@@ -270,11 +270,12 @@ def make_shell(init_func=None, banner=None, use_ipython=True):
 
 def make_runserver(app_factory, hostname='localhost', port=5000,
                    use_reloader=False, use_debugger=False, use_evalex=True,
-                   threaded=False, processes=1, static_files=None):
+                   threaded=False, processes=1, static_files=None,
+                   extra_files=None):
     """Returns an action callback that spawns a new development server.
 
     .. versionadded:: 0.5
-       `static_files` was added.
+       `static_files` and `extra_files` was added.
 
     :param app_factory: a function that returns a new WSGI application.
     :param hostname: the default hostname the server should listen on.
@@ -284,6 +285,7 @@ def make_runserver(app_factory, hostname='localhost', port=5000,
     :param threaded: the default threading setting.
     :param processes: the default number of processes to start.
     :param static_files: optionally a dict of static files.
+    :param extra_files: optionally a list of extra files to track for reloading.
     """
     def action(hostname=('h', hostname), port=('p', port),
                reloader=use_reloader, debugger=use_debugger,
@@ -292,5 +294,5 @@ def make_runserver(app_factory, hostname='localhost', port=5000,
         from werkzeug.serving import run_simple
         app = app_factory()
         run_simple(hostname, port, app, reloader, debugger, evalex,
-                   None, 1, threaded, processes, static_files)
+                   extra_files, 1, threaded, processes, static_files)
     return action
